--- a/public/aboutUs.css
+++ b/public/aboutUs.css
@@ -11,23 +11,17 @@ body {
     box-sizing: inherit;
   }
   
-  .row{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 100%;
-    max-Width: 1500px;
-  }
+  
 
 
-  .column {
+  /* .column {
     float: left;
     width: 33.3%;
     margin-bottom: 16px;
     padding: 0 8px;
-  }
+  } */
   
-  .card {
+  /* .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     margin: 8px;
     margin-bottom: 15px;
@@ -37,7 +31,7 @@ body {
     flex-direction: column;
     align-content: center;
     text-align:center;
-  }
+  } */
   
   .about-section {
     padding: 50px;
@@ -46,9 +40,9 @@ body {
     color: white;
   }
   
-  .container {
+  /* .container {
     padding: 0 16px;
-  }
+  } */
   
   .container::after, .row::after {
     content: "";
@@ -85,10 +79,10 @@ body {
 
 .picd{
   height:200px;
-width:300px;
-border-radius:10; 
-border: 2px solid #000;
-margin-left: 50px;
+  width:300px;
+  border-radius:10; 
+  border: 2px solid #000;
+  margin-left: 50px;
 }
 
   .pic{
