--- a/views/oldTasks.ejs
+++ b/views/oldTasks.ejs
@@ -33,14 +33,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="http://localhost:8080/home">Home<span
+                        <a class="nav-link" href="/">Home<span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="http://localhost:8080/home/aboutUs">About Us</a>
+                        <a class="nav-link" href="/aboutUs">About Us</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="http://localhost:8080/home/shopping">Shop</a>
+                        <a class="nav-link" href="/shop">Shop</a>
                     </li>
                     <% if(currentUser) { %>
                         <li class="nav-item active">
