--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -20,33 +20,45 @@
   </div>
 
   <h2 style="text-align:center" class="rteam">OUR TEAM</h2>
-  <div class="row my-5">
-    <div class="col-md-6">
-      <div class="card" style="width: 28rem; margin-left: 15%;">
-        <img src="https://i.ibb.co/zsGrJzK/dhruv-Dave.jpg" class="card-img-top" style = "height: 400px;" alt="dhruv-DaveImage">
-        <div class="card-body">
-          <h5 class="card-title">Dhruv Dave</h5>
-          <h5 class="card-title text-muted">Contributor</h5>
-          <p class="card-text">A student of IIIT Vadodara , Batch of 2020</p>
-          <a href="https://github.com/DhruvDave12" class="btn btn-primary">Github</a>
-          <a href="https://www.linkedin.com/in/dhruv1201/" class="btn btn-primary">Linked In</a>
+  <div class="dfff">
+
+  <div class="row my-5" id = "df">
+    <div class="col-6">
+      <div class="d-flex justify-content-center" >
+
+        <div class="card" style="width: 28rem;">
+          <img src="https://i.ibb.co/zsGrJzK/dhruv-Dave.jpg" class="card-img-top" style="height: 400px;"
+            alt="dhruv-DaveImage">
+          <div class="card-body">
+            <h5 class="card-title">Dhruv Dave</h5>
+            <h5 class="card-title text-muted">Contributor</h5>
+            <p class="card-text">A student of IIIT Vadodara , Batch of 2020</p>
+            <a href="https://github.com/DhruvDave12" class="btn btn-primary">Github</a>
+            <a href="https://www.linkedin.com/in/dhruv1201/" class="btn btn-primary">Linked In</a>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-md-6">
-      <div class="card" style="width: 28rem; margin-left: 15%;">
-        <img src="https://i.ibb.co/SyPMhcF/dhruv-Rashiya.jpg" class="card-img-top" style = "height: 400px;" alt="dhruv-RashiyaImage">
-        <div class="card-body">
-          <h5 class="card-title">Dhruv Rashiya</h5>
-          <h5 class="card-title text-muted">Contributor</h5>
-          <p class="card-text">A student of IIIT Vadodara , Batch of 2020</p>
-          <a href="https://github.com/rashiyadhruv" class="btn btn-primary">Github</a>
-          <a href="https://www.linkedin.com/in/dhruv-rashiya-6164791b8/" class="btn btn-primary">Linked In</a>
+    <div class="col-6">
+      <div class="d-flex justify-content-center">
+
+        <div class="card" style="width: 28rem;">
+          <img src="https://i.ibb.co/SyPMhcF/dhruv-Rashiya.jpg" class="card-img-top" style="height: 400px;"
+            alt="dhruv-RashiyaImage">
+          <div class="card-body">
+            <h5 class="card-title">Dhruv Rashiya</h5>
+            <h5 class="card-title text-muted">Contributor</h5>
+            <p class="card-text">A student of IIIT Vadodara , Batch of 2020</p>
+            <a href="https://github.com/rashiyadhruv" class="btn btn-primary">Github</a>
+            <a href="https://www.linkedin.com/in/dhruv-rashiya-6164791b8/" class="btn btn-primary">Linked In</a>
+          </div>
         </div>
       </div>
+
     </div>
   </div>
 
+</div>
 
 
   <footer class="container-fluid bg-grey py-5" id="foot">
