--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,7 +37,7 @@
 
    </div>
 <div class = "main">
-    <div class=panel>
+    <div class="panel">
         
         <div class=plan>
         <h1 class=header> For Customer</h1>
