--- a/public/customerHomePage.css
+++ b/public/customerHomePage.css
@@ -275,7 +275,7 @@ body {
     padding: 40px;
     /* position: absolute; */
     /* top: 10%; */
-    margin-left: 34%;
+    /* margin-left: 34%; */
     background: #191919;
     text-align: center;
     transition: 0.25s;
@@ -403,4 +403,6 @@ height: 100%;
 #foot{
     margin-top: 65%;
 }
+
+
 
