--- a/public/customerLogin.css
+++ b/public/customerLogin.css
@@ -242,21 +242,22 @@ body {
   100%{opacity: 1;}
 }
 
-.card {
+/* .card {
     margin-bottom: 20px;
     border: none
-}
+} */
 
 .box {
-    width: 500px;
+    /* width: 500px; */
     padding: 40px;
-    position: absolute;
+    /* position: absolute;
     top: 50%;
-    left: 50%;
+    left: 50%; */
     background: #191919;
     text-align: center;
     transition: 0.25s;
-    margin-top: 100px
+    margin-top: 10%;
+    
 }
 
 .box input[type="text"],
@@ -434,3 +435,10 @@ height: 100%;
     margin-top: 65%;
 }
 
+
+
+@media only screen and (max-width: 768px) {
+  .box{
+    width: 400px;
+  }
+}
