--- a/public/customerSignup.css
+++ b/public/customerSignup.css
@@ -248,11 +248,11 @@ body {
 }
 
 .box {
-    width: 500px;
+    /* width: 500px; */
     padding: 40px;
-    position: absolute;
+    /* position: absolute;
     top: 50%;
-    left: 50%;
+    left: 50%; */
     background: #191919;
     text-align: center;
     transition: 0.25s;
@@ -556,3 +556,8 @@ height: 100%;
     margin-top: 65%;
 }
 
+@media only screen and (max-width: 768px) {
+  .box{
+    width: 400px;
+  }
+}
