--- a/public/pricePage.css
+++ b/public/pricePage.css
@@ -244,22 +244,21 @@ body {
 }
 
 
-.card {
+/* .card {
     margin-bottom: 20px;
     border: none
-}
+} */
 
 .box {
-    width: 500px;
+    /* width: max-content; */
     padding: 40px;
-    position: absolute;
+    /* position: absolute;
     top: 50%;
-    left: 50%;
+    left: 50%; */
     background: #191919;
-    ;
     text-align: center;
     transition: 0.25s;
-    margin-top: 100px
+    margin-top: 10%;
 }
 
 .box input[type="text"],
@@ -339,9 +338,8 @@ body {
 
 body {
     font-family: 'Signika', sans-serif;
-    
-
  }
+
  .bg-grey {
     background: #292929;
  }
@@ -440,4 +438,8 @@ height: 100%;
     margin-top: 65%;
 }
 
-
+@media only screen and (max-width: 768px) {
+  .box{
+    width: 400px;
+  }
+}
