--- a/public/workerSignup.css
+++ b/public/workerSignup.css
@@ -243,17 +243,17 @@ body {
   100%{opacity: 1;}
 }
 
-.card {
+/* .card {
     margin-bottom: 20px;
     border: none
-}
+} */
 
 .box {
-    width: 500px;
+    /* width: 500px; */
     padding: 40px;
-    position: absolute;
+    /* position: absolute;
     top: 50%;
-    left: 50%;
+    left: 50%; */
     background: #191919;
     text-align: center;
     transition: 0.25s;
@@ -471,3 +471,9 @@ height: 100%;
     margin-top: 80%;
 }
 
+
+@media only screen and (max-width: 768px) {
+  .box{
+    width: 400px;
+  }
+}
