--- a/views/status.ejs
+++ b/views/status.ejs
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="http://localhost:8080/home">S.I.T.Y</a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -56,9 +56,9 @@
         </nav>
     </div>
 
-    <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4" id = "main">
+        <div class="d-flex justify-content-center">
+
+        <div id = "main">
             <div class="card" style="width: 18rem;">
                 <img src="https://images.unsplash.com/photo-1601430854328-26d0d524344a?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fHBva2Vtb258ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                     class="card-img-top" alt="">
@@ -79,10 +79,9 @@
             <h3> <br> If not you can contact <br> customer care at <br> 123034311</h3>
 
         </div>
-
-        <div class="col-4"></div>
-
     </div>
+
+       
 
     
 
