--- a/views/workerHomepage.ejs
+++ b/views/workerHomepage.ejs
@@ -20,21 +20,18 @@
 
 <body>
 
-    <!-- NavBar -->
-    <div class="nb" style>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="http://localhost:8080/home">S.I.T.Y</a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">S.I.T.Y</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home<span
-                                class="sr-only">(current)</span></a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="/aboutUs">About Us</a>
@@ -42,7 +39,6 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="/shop">Shop</a>
                     </li>
-
                     <% if(currentWorker) { %>
                         <li class="nav-item active">
                             <a href="/workerlogout" class="nav-link">Logout</a>
@@ -51,12 +47,15 @@
                             <a href="/workerlogin" class="nav-link">Login</a>
                             <a href="/workerSignup" class="nav-link">Signup</a>
                             <% } %>
-
-                </ul>
-
             </div>
-        </nav>
-    </div>
+        </div>
+    </nav>
+
+
+
+
+
+
 
 
     <div class='light x1'></div>
@@ -69,18 +68,23 @@
     <div class='light x8'></div>
     <div class='light x9'></div>
 
+    <div class="d-flex justify-content-center">
 
-    <div class="infoo">
-        <h1 class = "text-white">Welcome <%= worker.username%>
-        </h1>
+        <div class="infoo">
+            <h1 class="text-white">Welcome <%= worker.username%>
+            </h1>
+        </div>
     </div>
 
-    <h1 class="text-light" style="margin-left: 46%;margin-top: 5%;">Tasks</h1>
+    <div class="d-flex justify-content-center">
 
-    <!-- Display the requests here -->
-    <div class="row mt-4 mb-4">
-        <div class="col-4"></div>
-        <div class="col-4">
+
+        <h1 class="text-light" style="margin-top: 5%;">Tasks</h1>
+    </div>
+
+    <div class="d-flex justify-content-center">
+
+        <div class="container">
             <% for(let d of data) { %>
                 <% if(d.owner) { %>
                     <!-- Add Carousel here -->
@@ -88,22 +92,23 @@
                         <div class="carousel-inner">
                             <% d.images.forEach((imgs, i)=> { %>
                                 <div class="carousel-item <%= i === 0 ? 'active': '' %>">
-                                    <img src="<%= imgs.url %>" class="d-block" style = "height:300px; width: 600px;" alt="">
+                                    <img src="<%= imgs.url %>" class="d-block" style="height:300px; width: 600px;"
+                                        alt="">
                                 </div>
                                 <% }) %>
                         </div>
-                        <% if(d.images.length > 1) { %> 
-                        <button class="carousel-control-prev bg-white" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next bg-white" type="button" data-bs-target="#carouselExampleControls"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    <% } %> 
+                        <% if(d.images.length> 1) { %>
+                            <button class="carousel-control-prev bg-white" type="button"
+                                data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next bg-white" type="button"
+                                data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                            <% } %>
                     </div>
 
                     <div class="card mb-3">
@@ -115,20 +120,25 @@
                             <% if(d.workerName){ %>
                                 <a href="/worker/<%=worker._id%>/price/<%= d._id %>"
                                     class="btn btn-primary disabled">View</a>
-                                <a href="/status/<%= d._id %>/<%= worker._id %>" class="btn btn-success">View Status</a>
+                                <a href="/status/<%= d._id %>/<%= worker._id %>" class="btn btn-success">View
+                                    Status</a>
                                 <% } else { %>
                                     <a href="/worker/<%=worker._id%>/price/<%= d._id %>"
                                         class="btn btn-primary">View</a>
-                                    <a href="/status/<%= d._id %>/<%= worker._id %>" class="btn btn-success">View Status</a>
-                                <% } %>
+                                    <a href="/status/<%= d._id %>/<%= worker._id %>" class="btn btn-success">View
+                                        Status</a>
+                                    <% } %>
                         </div>
                     </div>
                     <% } %>
                         <% } %>
-
         </div>
-        <div class="col-4"></div>
+
     </div>
+
+
+
+
 
 
     <!-- Footer -->
@@ -140,7 +150,8 @@
                         <!-- <img src="https://i.ibb.co/sHZz13b/logo.png" class="w-50 logo-footer" > -->
                         <h1 class="display-3 mr-5">S.I.T.Y</h1>
                         <p class="lead">This is a project based on smartCity where,</p>
-                        <p class="lead">We can make city smart and manage waste through this small project of
+                        <p class="lead">We can make city smart and manage waste through this small
+                            project of
                             ours.</p>
                     </div>
                 </div>
