--- a/views/workForm.ejs
+++ b/views/workForm.ejs
@@ -124,7 +124,7 @@
                 <div class="col-md-4 px-4 mt-4">
                     <h6> About S.I.T.Y</h6>
                     <p>Trying to make a difference in society</p>
-                    <a href="/abousUs.html" class="btn-footer"> About Us </a><br>
+                    <a href="/aboutUs" class="btn-footer"> About Us </a><br>
                 </div>
                 <div class="col-md-4 mx-auto mt-4">
                     <div class="row" id="sH">
