--- a/views/shopIndex.ejs
+++ b/views/shopIndex.ejs
@@ -58,9 +58,10 @@
 <div class='light x9'></div>
 
 
- id+=  ""sitys text-lightHOPPING  
     <!-- Shopping Cart -->
     <h1 class = "display-4 text-center text-light">S.I.T.Y Shopping</h1>
+    <h6 class = "text-center text-light">Will make it working shortly....</h1>
+
 
     <div class="container">
         <div class="row">
